# take-me-there

./: .gitignore  Cargo.toml  TODO.md
sample/: NX-PI-01_CZ_CISJR-JDF_LINE-10011_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-10154_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-10378_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-10987_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-11366_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-1442_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-1707_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-2504_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-3710_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-3864_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-4039_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-4182_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-501_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-6134_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-6814_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-6906_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-7214_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-850_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-8510_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-9017_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-9034_20241101.xml  NX-PI-01_CZ_CISJR-JDF_LINE-9253_20241101.xml
sample-all/: download.sh
src/: connection_graph.rs  main.rs  parser.rs  structure.rs
