[package]
name = "take-me-there"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
bincode = "1.3.3"
bit-set = { version = "0.8.0", features = ["serde"] }
chrono = { version = "0.4.38" , features = ["serde"]}
petgraph = "0.6.5"
quick-xml = "0.37.0"
serde = { version = "1.0.214", features = ["derive"] }
